Added CSS changes

--- a/src/components/TributeLeaderboard.css
+++ b/src/components/TributeLeaderboard.css
@@ -16,6 +16,7 @@
   color: #e0e0e0;
   font-size: 2rem;
   margin-bottom: 10px;
+  font-family: "SUSE Mono", monospace;
 }
 
 .leaderboard-subtitle {
