--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   font-size: 3rem;
   margin-bottom: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  font-family: "SUSE Mono", monospace;
 }
 
 .subtitle {
@@ -116,4 +117,13 @@
   .app {
     padding: 10px;
   }
+}
+
+
+
+.suse-mono {
+  font-family: "SUSE Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
