--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,13 @@
   font-size: 3rem;
   margin-bottom: 10px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  font-family: "SUSE Mono", monospace;
+  font-family: "Sixtyfour", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "BLED" 0,
+    "SCAN" 0;
 }
 
 .subtitle {
@@ -121,9 +127,12 @@
 
 
 
-.suse-mono {
-  font-family: "SUSE Mono", monospace;
+.sixtyfour {
+  font-family: "Sixtyfour", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-variation-settings:
+    "BLED" 0,
+    "SCAN" 0;
 }
