--- a/src/components/TributeLeaderboard.css
+++ b/src/components/TributeLeaderboard.css
@@ -16,7 +16,13 @@
   color: #e0e0e0;
   font-size: 2rem;
   margin-bottom: 10px;
-  font-family: "SUSE Mono", monospace;
+  font-family: "Sixtyfour", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "BLED" 0,
+    "SCAN" 0;
 }
 
 .leaderboard-subtitle {
